--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^20.14.2",
+    "command-line-args": "^5.2.1",
     "net": "^1.0.2"
   },
   "dependencies": {
-    "@types/node": "^20.14.2",
+    "@types/command-line-args": "^5.2.3",
     "node-pty": "^1.0.0",
     "prompt-sync": "^4.2.0",
     "typescript": "^5.4.5"
